Fix
Fixed margins for desktop and tab devices which were messed up previously when the mobile view was set up.

--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -101,7 +101,8 @@ a {
 	}
 
 	#quote1 {
-		margin-top: 0%;
+		margin-top: 0% !important;
+		margin-bottom: 0% !important;
 		padding: 1.5%;
 		background-color: rgba(255, 255, 255, 0.75);
 		width: 30%;
@@ -112,7 +113,9 @@ a {
 	}
 
 	#quote2 {
-		margin-top: 0%;
+		margin-top: 0% !important;
+		margin-left: 0% !important;
+		margin-bottom: 0% !important;
 		padding: 1.5%;
 		background-color: rgba(255, 255, 255, 0.75);
 		width: 30%;
@@ -123,6 +126,7 @@ a {
 	}
 
 	#quote3 {
+		margin-bottom: 0% !important;
 		padding: 1.5%;
 		background-color: rgba(255, 255, 255, 0.75);
 		width: 50%;
@@ -134,6 +138,7 @@ a {
 	}
 
 	#quote4 {
+		margin-bottom: 0% !important;
 		padding: 1.5%;
 		background-color: rgba(255, 255, 255, 0.75);
 		width: 30%;
@@ -145,6 +150,7 @@ a {
 	}
 	
 	#quote5 {
+		margin-bottom: 0% !important;
 		padding: 1.5%;
 		background-color: rgba(255, 255, 255, 0.75);
 		width: 30%;
